# Hydroponics-With-Eyes

./: README.md
ml-model/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  template.py
ml-model/notebooks/: 01_data_ingestion.ipynb.ipynb  02_prepare_base_model.ipynb
ml-model/research/: 01_data_ingestion.ipynb.ipynb
ml-model/src/cnnClassifier/config/: configuration.py
