[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnnClassifier"
version = "0.1.0"
description = "A small python package for a CNN app"
readme = "README.md"
authors = [
    { name = "Victor-Chaba", email = "chabavictor7@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8.1"

# Main runtime dependencies
dependencies = [
    "tensorflow>=2.9.0",
    "pandas>=1.3.0",
    "dvc>=2.0.0",
    "mlflow>=1.29.0",
    "notebook>=6.4.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "python-box>=6.0.0",
    "PyYAML>=5.4.0",
    "tqdm>=4.60.0",
    "ensure>=1.0.0",
    "joblib>=1.0.0",
    "types-PyYAML>=6.0.0",
    "scipy>=1.7.0",
    "Flask>=2.0.0",
    "Flask-Cors>=3.0.10",
    "gdown>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Victor-Chaba/Hydroponics-With-Eyes"
"Bug Tracker" = "https://github.com/Victor-Chaba/Hydroponics-With-Eyes/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
